
	* src/color.c (draw_color_smooth_box) src/gadgets.h src/gadgets.c
	src/graphics.c (boundary):  Add a field color_box.xoffset to allow the
	colorbox to be shifted left or right from the default placement.
	Use this internally to correct for the width taken by y2 tics and
	labels.
	Bugfix:  'set y2tics; plot foo using 1:2:3 axes x1y2 lc palette'
	
2009-07-24  Jérôme Lodewyck <lodewyck@users.sourceforge.net>

	* qtterminal/qt_term.cpp: use locale config macros

2009-07-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (store2d_point):  If the plot uses palette colors taken
	from the Z coordinate, then also use Z to auto-scale cbrange.
	Bug #2133407

2009-07-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/save.c: The "set view" command was incorrectly saved twice.
	Bug #2822433

	* src/graphics.c (plot_image_or_update_axes): In image failsafe mode,
	clip the individual rectangles (pixels) to the edge of the plot.
	Bug #2820529

	* term/win.trm: WIN_filled_polygon():  Attempt to handle pattern fill
	by piggybacking on the WIN_fillbox() code that creates a pattern brush.

2009-07-14  Ethan A Merritt  <merritt@u.washington.edu>

	* term/win.trm: Set the fillstyle belonging to a filled polygon.
	Unfortunately, the filled_poly code in wgraph.c then ignores this,
	but at least we tried.

	* src/win/wgraph.c: Handle negative line types correctly, including
	support for LT_BACKGROUND.
	Bug #1952287

	* src/gplt_x11.c: The previous state was not being properly restored
	after drawing a filled rectangle.

2009-07-13  Ethan A Merritt  <merritt@u.washington.edu>

	* term/win.trm (WIN_set_color) src/win/wgraph.c (drawgraph):
	Repair breakage of the set color mechanism.  term->set_color()
	should set the color simultaneously for pens, fill brushes, and
	text.  But no other line or fill properties should be affected.
	Fixes various reported bugs, including #2725599

2009-07-10  Ethan A Merritt  <merritt@u.washington.edu>
